--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -739,7 +739,7 @@ script:
           ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, color.r, color.g, color.b);
 
           // Turn on
-          target_led->get(led_index).set(id(button_color)[0], id(button_color)[1], id(button_color)[2]);
+          target_led->get(led_index).set(id(button_color));
           target_led->schedule_show();
 
           //id(my_light).get_output()->set_pixel(0, 255, 0, 0);  // Set first LED to red
