--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -735,8 +735,9 @@ script:
 
           // Get current color & brightness
           float brightness = 0.0, red = 0.0, green = 0.0, blue = 0.0;
-          Color color = target_led->get(led_index).get();
-          ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, color.r, color.g, color.b);
+          int[] color = target_led->get(led_index).get();
+          ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, color[0], color[1], color[2]);
+          //ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, color.r, color.g, color.b);
 
           // Turn on
           target_led->get(led_index).set(id(button_color));
