--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -688,34 +688,33 @@ script:
     then:
       - lambda: |-
           int button;
-          //light::LightState* target_led = nullptr;
-          esphome::light::AddressableLight *target_led = nullptr;
+          esphome::light::AddressableLight *target_led = static_cast<esphome::light::AddressableLight *>(id(leds).get_output());
           int led_index;
 
           switch (x) {
             case 1:
             case 2:
-              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_left).get_output());
+              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_left).get_output());
               button = 1;
               led_index = 13;
               break;
             case 3:
             case 4:
             case 5:
-              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_left).get_output());
+              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_left).get_output());
               button = 2;
               led_index = 11;
               break;
             case 6:
             case 7:
             case 8:
-              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_right).get_output());
+              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_right).get_output());
               button = 3;
               led_index = 9;
               break;
             case 9:
             case 10:
-              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_right).get_output());
+              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_right).get_output());
               button = 4;
               led_index = 7;
               break;
@@ -732,36 +731,23 @@ script:
           // ESP_LOGD("button", "Button %d LED was %s", button, is_on ? "ON" : "OFF");
 
           // Get current color & brightness
-          esphome::Color color = target_led->get(led_index).get();
-          ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, color.r, color.g, color.b);
+          esphome::Color original_color = target_led->get(led_index).get();
+          ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, original_color.r, original_color.g, original_color.b);
 
           // Turn on
-          esphome::Color newColor = Color(id(button_color)[0], id(button_color)[1], id(button_color)[2]);
-          target_led->get(led_index).set(newColor);
+          esphome::Color new_color = Color(id(button_color)[0], id(button_color)[1], id(button_color)[2]);
+          target_led->get(led_index).set(new_color);
           target_led->schedule_show();
 
-          //id(my_light).get_output()->set_pixel(0, 255, 0, 0);  // Set first LED to red
-          //id(my_light).get_output()->schedule_show();  
-
-          /*
           // Set brightness and color (assuming you’re using effects or color-capable lights)
-          target_led->make_call()
-            .set_brightness(1.0)
-            .perform();
-
           // Delay and dim down
           delay(1000);
           ESP_LOGD("button", "Dimming button %d", button);
-          target_led->make_call()
-            .set_brightness(0.2)
-            .set_transition_length(1.0)
-            .perform();
-          // Restore original light state
-          target_led->make_call()
-            .set_rgb(red, green, blue)
-            .set_brightness(brightness)
-            .perform();
-          */
+          target_led->start_transition_(Color(0, 0, 0), 1, true);
+          target_led->schedule_show();
+
+          target_led->get(led_index).set(original_color);
+          target_led->schedule_show();
 
   - id: refresh_nightlight
     mode: restart
