--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -746,13 +746,15 @@ script:
           //esphome::Color original_color = target_led->get(id(led_index)).get();
           esphome::Color original_color = id(original_led_color);
           original_color = target_led->get(id(led_index)).get();
-          ESP_LOGD("button", "Button %d color was %f, %f, %f - %f", button, original_color.r, original_color.g, original_color.b);
+          ESP_LOGD("button", "Button %d color was %f, %f, %f", button, original_color.r, original_color.g, original_color.b);
 
           // Turn on
           target_led->get(id(led_index)).set(Color(id(button_color)[0], id(button_color)[1], id(button_color)[2]));
           target_led->schedule_show();
       - delay: 1s
       - lambda: |-
+          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(leds).get_output());
+          id(target_led_led) = target_led;
           esphome::Color new_color = Color(id(button_color)[0], id(button_color)[1], id(button_color)[2]);
           esphome::Color original_color = id(original_led_color);
           ESP_LOGD("button", "Dimming led_index %d", id(led_index));
