--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -749,23 +749,29 @@ script:
           ESP_LOGD("button", "Button %d color was %d, %d, %d", button, original_color.r, original_color.g, original_color.b);
 
           // Turn on
-          target_led->get(id(led_index)).set(esphome::Color(id(button_color)[0], id(button_color)[1], id(button_color)[2]));
+          int r = id(button_color)[0];
+          int g = id(button_color)[1];
+          int b = id(button_color)[2];
+          esphome::Color new_color = esphome::Color(r, g, b);
+          target_led->get(id(led_index)).set(new_color);
           target_led->schedule_show();
       - delay: 1s
       - lambda: |-
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(leds).get_output());
           id(target_led_led) = target_led;
-          esphome::Color new_color = esphome::Color(id(button_color)[0], id(button_color)[1], id(button_color)[2]);
+          int r = id(button_color)[0];
+          int g = id(button_color)[1];
+          int b = id(button_color)[2];
           esphome::Color original_color = id(original_led_color);
           ESP_LOGD("button", "Dimming led_index %d", id(led_index));
           // fade the color back into original_color
-          int r=0, g=0, b=0;
+          int r1=0, g1=0, b1=0;
           for (float factor = 0.8f; factor > 0.0f; factor -= 0.2f) {
-            r = new_color.r * factor;
-            g = new_color.g * factor;
-            b = new_color.b * factor;
+            r1 = r * factor;
+            g1 = g * factor;
+            b1 = b * factor;
 
-            target_led->get(id(led_index)).set(esphome::Color(r, g, b));
+            target_led->get(id(led_index)).set(esphome::Color(r1, g1, b1));
             target_led->schedule_show();
             delay(100);
           }
