--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -762,7 +762,13 @@ script:
           int r = id(button_color)[0];
           int g = id(button_color)[1];
           int b = id(button_color)[2];
-          esphome::Color original_color = id(original_led_color);
+          //esphome::Color original_color = id(original_led_color);
+          esphome::Color original_color(
+            id(original_led_color).r,
+            id(original_led_color).g,
+            id(original_led_color).b
+          );
+
           ESP_LOGD("button", "Dimming led_index %d", id(led_index));
           // fade the color back into original_color
           int r1=0, g1=0, b1=0;
