--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -762,7 +762,7 @@ script:
           int g = id(button_color)[1];
           int b = id(button_color)[2];
           //esphome::Color original_color = id(original_led_color);
-          esphome::Color original_color(
+          esphome::Color original_color = esphome::Color(
             id(original_led_color).r,
             id(original_led_color).g,
             id(original_led_color).b
