--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -708,7 +708,7 @@ script:
           ESP_LOGD("button", "1....");
           int button;
           ESP_LOGD("button", "2....");
-          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
+          esphome::light::AddressableLight* target_led = nullptr;
           ESP_LOGD("button", "3....");
           id(target_led_led) = target_led;
           ESP_LOGD("button", "4....");
@@ -716,27 +716,31 @@ script:
           switch (x) {
             case 1:
             case 2:
-              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_left).get_output());
+              ESP_LOGD("button", "4.1....");
+              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_left).get_output());
+              ESP_LOGD("button", "4.2....");
               button = 1;
+              ESP_LOGD("button", "4.3....");
               id(led_index) = 4;
+              ESP_LOGD("button", "4.4....");
               break;
             case 3:
             case 4:
             case 5:
-              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_left).get_output());
+              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_left).get_output());
               button = 2;
               id(led_index) = 3;
               break;
             case 6:
             case 7:
             case 8:
-              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_right).get_output());
+              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_center_right).get_output());
               button = 3;
               id(led_index) = 2;
               break;
             case 9:
             case 10:
-              //target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_right).get_output());
+              target_led = static_cast<esphome::light::AddressableLight *>(id(leds_bottom_right).get_output());
               button = 4;
               id(led_index) = 1;
               break;
