--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -705,6 +705,15 @@ script:
       x: int
     then:
       - lambda: |-
+        id(leds).set_led_color(7, ESPColor(0, 255, 0));
+        id(leds).update();
+
+  - id: button_pressed2
+    mode: restart
+    parameters:
+      x: int
+    then:
+      - lambda: |-
           ESP_LOGD("button", "1....");
           int button;
           ESP_LOGD("button", "2....");
@@ -753,6 +762,7 @@ script:
           // 3 to button 2 led top center left
           // 6 to button 3 led left center top
           // 10 to button 4 led left center bottom
+// stuck here?!?
           ESP_LOGD("button", "resolved X %d to button %d", x, button);
 
           // Is light on?
