--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -705,7 +705,7 @@ script:
       x: int
     then:
       - lambda: |-
-          id(leds)[7] = ESPColor(0, 255, 0);
+          id(leds)[7].set(ESPColor(0, 255, 0));
 
   - id: button_pressed2
     mode: restart
