--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -757,6 +757,7 @@ script:
           ESP_LOGD("button", "resolved X %d", x);
           // it get's stuck here:
           ESP_LOGD("button", "to button %d", button);
+          ESP_LOGD("button", "at led %d", led_index);
 
           // Is light on?
           // bool is_on = false;
@@ -777,10 +778,9 @@ script:
           int g = id(button_color)[1];
           int b = id(button_color)[2];
           esphome::Color new_color = esphome::Color(r, g, b);
-          /*
+          ESP_LOGD("button", "Set %d to %d, %d, %d", led_index, r, g, b);
           target_led->get(id(led_index)).set(new_color);
-          target_led->schedule_show();
-          */
+          //target_led->schedule_show();
       - delay: 1s
       - lambda: |-
           int fuckyou = 1;
