--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -182,10 +182,6 @@ globals:
   - id: led_index
     type: int
     initial_value: '0'
-  - id: target_led_led
-    type: esphome::light::AddressableLight*
-    initial_value: 'nullptr'
-
 
 binary_sensor:
   - platform: template
@@ -705,47 +701,36 @@ script:
       x: int
     then:
       - lambda: |-
-          ESP_LOGD("button", "1....");
           int button = 0;
-          ESP_LOGD("button", "2....");
-          esphome::light::AddressableLight* target_led = nullptr;
-          ESP_LOGD("button", "3....");
-          target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-          id(target_led_led) = target_led;
-          ESP_LOGD("button", "4....");
+          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
 
           switch (x) {
             case 1:
             case 2:
               button = 1;
-              id(led_index) = 4;
+              id(led_index) = 7;
               break;
             case 3:
             case 4:
             case 5:
               button = 2;
-              id(led_index) = 3;
+              id(led_index) = 9;
               break;
             case 6:
             case 7:
             case 8:
               button = 3;
-              id(led_index) = 2;
+              id(led_index) = 11;
               break;
             case 9:
             case 10:
               button = 4;
-              id(led_index) = 1;
+              id(led_index) = 13;
               break;
             default:
               ESP_LOGW("script", "Unexpected X: %d", x);
               return;
           }
-          ESP_LOGD("button", "5....");
-          // 1 to button 1 led top right
-          // 3 to button 2 led top center left
-          // 6 to button 3 led left center top
-          // 10 to button 4 led left center bottom
           ESP_LOGD("button", "resolved X %d to button %d at led %d", x, button, id(led_index));
 
           // Is light on?
@@ -753,7 +738,6 @@ script:
           // target_led->current_values_as_binary(&is_on);
           // ESP_LOGD("button", "Button %d LED was %s", button, is_on ? "ON" : "OFF");
 
-          id(led_index) = 10;
           /*
           // Get current color & brightness
           //esphome::Color original_color = target_led->get(id(led_index)).get();
@@ -796,7 +780,7 @@ script:
 
             target_led->get(id(led_index)).set(esphome::Color(r1, g1, b1));
             target_led->schedule_show();
-            delay(100);
+            esphome::delay(100);
           }
 
           /* 
