--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -756,32 +756,21 @@ script:
           int r = id(button_color)[0];
           int g = id(button_color)[1];
           int b = id(button_color)[2];
-          esphome::Color original_color = id(original_led_color);
-          /*
-          esphome::Color original_color = esphome::Color(
-            id(original_led_color).r,
-            id(original_led_color).g,
-            id(original_led_color).b
-          );
-          */
 
-          ESP_LOGD("button", "Dimming led_index %d", id(led_index));
+          ESP_LOGD("button", "Dimming led_index %d back to %d", id(led_index), id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
           // fade the color back into original_color
           int r1=0, g1=0, b1=0;
           for (float factor = 0.8f; factor > 0.0f; factor -= 0.2f) {
-            r1 = r * factor;
-            g1 = g * factor;
-            b1 = b * factor;
+            r1 = r*factor + id(original_led_color).r*(1.0-factor);
+            g1 = g*factor + id(original_led_color).g*(1.0-factor);
+            b1 = b*factor + id(original_led_color).b*(1.0-factor);
 
             target_led->get(id(led_index)).set(esphome::Color(r1, g1, b1));
             target_led->schedule_show();
-            delay(100);
+            esphome::delay(100);
           }
-
-          /* 
-          //target_led->get(id(led_index)).set(original_color);
-          //target_led->schedule_show();
-          */
+          target_led->get(id(led_index)).set(id(original_led_color));
+          target_led->schedule_show();
 
   - id: refresh_nightlight
     mode: restart
