--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -767,7 +767,7 @@ script:
 
             target_led->get(id(led_index)).set(esphome::Color(r1, g1, b1));
             target_led->schedule_show();
-            esphome::delay(100);
+            App::delay(100);
           }
           target_led->get(id(led_index)).set(id(original_led_color));
           target_led->schedule_show();
