--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -695,7 +695,8 @@ sun:
 
 
 script:
-  - id: button_pressed
+
+  - id: button_pressed_old
     mode: restart
     parameters:
       x: int
@@ -703,7 +704,6 @@ script:
       - lambda: |-
           int button = 0;
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-
           switch (x) {
             case 1:
             case 2:
@@ -732,16 +732,13 @@ script:
               return;
           }
           ESP_LOGD("button", "resolved X %d to button %d at led %d", x, button, id(led_index));
-
           // Is light on?
           // bool is_on = false;
           // target_led->current_values_as_binary(&is_on);
           // ESP_LOGD("button", "Button %d LED was %s", button, is_on ? "ON" : "OFF");
-
           // Get current color & brightness
           id(original_led_color) = target_led->get(id(led_index)).get();
           ESP_LOGD("button", "Button %d color was %d, %d, %d", button, id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
-
           // Turn on
           int r = id(button_color)[0];
           int g = id(button_color)[1];
@@ -752,11 +749,11 @@ script:
           target_led->schedule_show();
       - delay: 1s
       - lambda: |-
+          //make this part of the script recursive
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
           int r = id(button_color)[0];
           int g = id(button_color)[1];
           int b = id(button_color)[2];
-
           ESP_LOGD("button", "Dimming led_index %d back to %d", id(led_index), id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
           // fade the color back into original_color
           int r1=0, g1=0, b1=0;
@@ -764,13 +761,83 @@ script:
             r1 = r*factor + id(original_led_color).r*(1.0-factor);
             g1 = g*factor + id(original_led_color).g*(1.0-factor);
             b1 = b*factor + id(original_led_color).b*(1.0-factor);
-
             target_led->get(id(led_index)).set(esphome::Color(r1, g1, b1));
             target_led->schedule_show();
-            App::delay(100);
+            delay(100);
           }
           target_led->get(id(led_index)).set(id(original_led_color));
           target_led->schedule_show();
+
+  - id: button_pressed
+    mode: restart
+    parameters:
+      x: int
+    then:
+      - lambda: |-
+          int button = 0;
+          int led_index = 0;
+          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
+          switch (x) {
+            case 1:
+            case 2:
+              button = 1;
+              led_index = 12;
+              break;
+            case 3:
+            case 4:
+            case 5:
+              button = 2;
+              led_index = 10;
+              break;
+            case 6:
+            case 7:
+            case 8:
+              button = 3;
+              led_index = 8;
+              break;
+            case 9:
+            case 10:
+              button = 4;
+              led_index = 6;
+              break;
+            default:
+              ESP_LOGW("script", "Unexpected X: %d", x);
+              return;
+          }
+          ESP_LOGD("button", "resolved X %d to button %d at LED %d", x, button, led_index);
+          original_color = target_led->get(led_index).get();
+          ESP_LOGD("button", "LED %d color was %d, %d, %d", led_index, original_color.r, original_color.g, original_color.b);
+          id(recursive_button_pressed)->execute(0, led_index, original_color);
+
+  - id: recursive_button_pressed
+    mode: restart
+    parameters:
+      iteration: int
+      led_index: int
+      esphome::Color: original_color
+    then:
+      - if:
+          condition:
+            lambda: 'return iteration == 0;'
+          then:
+            - delay: 1s
+          else:
+            - delay: 100ms
+      - lambda: |-
+          ESP_LOGD("button", "Dimming led_index %d back to %d, %d, %d", led_index, original_color.r, original_color.g, original_color.b);
+          // fade to original_color
+          int r1=0, g1=0, b1=0;
+          float factor = iteration * 0.2f;
+          r1 = id(button_color)[0]*(1.0-factor) + original_color.r*factor;
+          g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
+          b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
+          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
+          target_led->get(led_index).set(esphome::Color(r1, g1, b1));
+          target_led->schedule_show();
+          if (iteration<5) {
+            id(recursive_button_pressed)->execute(iteration+1, led_index, original_color);
+          }
+
 
   - id: refresh_nightlight
     mode: restart
