--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -804,17 +804,16 @@ script:
               ESP_LOGW("script", "Unexpected X: %d", x);
               return;
           }
-          ESP_LOGD("button", "resolved X %d to button %d at LED %d", x, button, led_index);
-          original_color = target_led->get(led_index).get();
-          ESP_LOGD("button", "LED %d color was %d, %d, %d", led_index, original_color.r, original_color.g, original_color.b);
-          id(recursive_button_pressed)->execute(0, led_index, original_color);
+          ESP_LOGD("button", "resolved X %d to button %d at led %d", x, button, led_index);
+          id(original_led_color) = target_led->get(led_index).get();
+          ESP_LOGD("button", "Button %d color was %d, %d, %d", button, id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
+          id(recursive_button_pressed)->execute(0, led_index);
 
   - id: recursive_button_pressed
     mode: restart
     parameters:
       iteration: int
       led_index: int
-      esphome::Color: original_color
     then:
       - if:
           condition:
@@ -824,18 +823,18 @@ script:
           else:
             - delay: 100ms
       - lambda: |-
-          ESP_LOGD("button", "Dimming led_index %d back to %d, %d, %d", led_index, original_color.r, original_color.g, original_color.b);
+          ESP_LOGD("button", "Dimming led_index %d back to %d, %d, %d", led_index, id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
           // fade to original_color
           int r1=0, g1=0, b1=0;
           float factor = iteration * 0.2f;
-          r1 = id(button_color)[0]*(1.0-factor) + original_color.r*factor;
-          g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
-          b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
+          r1 = id(button_color)[0]*(1.0-factor) + id(original_led_color).r*factor;
+          g1 = id(button_color)[1]*(1.0-factor) + id(original_led_color).g*factor;
+          b1 = id(button_color)[2]*(1.0-factor) + id(original_led_color).b*factor;
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
           target_led->get(led_index).set(esphome::Color(r1, g1, b1));
           target_led->schedule_show();
           if (iteration<5) {
-            id(recursive_button_pressed)->execute(iteration+1, led_index, original_color);
+            id(recursive_button_pressed)->execute(iteration+1, led_index);
           }
 
 
